# hedgehog

./: .clang_complete  .dockerignore  .gitignore  .gitmodules  .syntastic_cpp_config  .vimrc  CMakeLists.txt  Dockerfile  README.md  README.rst  README_OSX.rst  entrypoint.sh  makefile  makefile.in
src/: CMakeLists.txt  Dockerfile  Doxyfile
src/bdry3d/: .face_map_subpatch.hpp.swp  .geogram_interface.cpp.swo  BoundingBoxGrid.cpp  BoundingBoxGrid.hpp  CMakeLists.txt  analytic_surf.cpp  analytic_surf.hpp  face_map_subpatch.cpp  face_map_subpatch.hpp  geogram_interface.cpp  geogram_interface.hpp  makedepend.linux-gnu  makedepend.mac-osx  makefile  on_surface_point.hpp  p4est_interface.cpp  p4est_interface.hpp  p4est_refinement.cpp  p4est_refinement.hpp  p4est_refinement_pseudocode.md  patch_samples.cpp  patch_samples.hpp  patch_samples.hpp.orig  patch_surf.cpp  patch_surf.hpp  patch_surf_analytic.cpp  patch_surf_analytic.hpp  patch_surf_blended.cpp  patch_surf_blended.hpp  patch_surf_face_map.cpp  patch_surf_face_map.hpp  patch_surf_nanospline.cpp  patch_surf_nanospline.hpp
src/bie3d/: CMakeLists.txt  collocation_patch_samples.cpp  collocation_patch_samples.hpp  error_estimate.cpp  error_estimate.hpp  evaluator.cpp  evaluator.hpp  evaluator_far.cpp  evaluator_far.hpp  evaluator_near.cpp  evaluator_near.hpp  evaluator_near_interpolate.cpp  evaluator_near_interpolate.hpp  evaluator_on_surface.cpp  evaluator_on_surface.hpp  evaluator_qbkix.cpp  evaluator_qbkix.hpp  evaluator_qbkix_average.cpp  evaluator_qbkix_average.hpp  legacy_markgrid_pseudocode.md  makedepend.mac-osx  makefile  markgrid.cpp  markgrid.hpp  solver_gmres_double_layer.cpp  solver_gmres_double_layer.hpp  solver_initialization.txt  solver_interface.cpp  solver_interface.cpp.orig  solver_interface.hpp  solver_utils.cpp  solver_utils.hpp  spatial_grid.cpp  spatial_grid.hpp
src/common/: CMakeLists.txt  Dcuhre.cpp  Dcuhre.hpp  NbrDefs.hpp  PerDirMaps.hpp  boundary_data.cpp  dsgrid_modified.c  ebi.cpp  ebi.hpp  ebi_include.hpp  ebi_namespace.hpp  ebi_petsc.hpp  ebi_petsc_error.hpp  ebi_uti.cpp  ebi_uti.hpp  ebiobject.hpp  ebiobject_inline.hpp  exsol3d.cpp  exsol3d.hpp  f_dcuhre.f  f_qshep3d.f  ffunc.c  ffunc.h  interpolate.cpp  interpolate.hpp  interpolate.tpp  kernel3d.cpp  kernel3d.hpp  makedepend.mac-osx  makefile  mat3t.hpp  memAlloc.cpp  memAlloc.hpp  mobo_blas.h  mobo_lapack.h  mobo_slatec.h  nummat.cpp  nummat.hpp  numtns.hpp  numvec.cpp  (+20 more)
src/ebi_info/: CMakeLists.txt  callgraph.txt  file_list  parameter_list.txt  renamed_variables.txt
src/ebi_info/alg_summary/: alg_summary.aux  alg_summary.tex
src/fmm3d/: CMakeLists.txt  fmm_interface.cpp  fmm_interface.hpp  pvfmm_bis_interface.cpp  pvfmm_bis_interface.hpp  stkfmm_interface.cpp  stkfmm_interface.hpp  tree.hpp
src/fmm3d/pvfmm/: pvfmm_laplace_kernel.hpp  pvfmm_mod_helmholtz_kernel.hpp  pvfmm_navier_kernel.hpp  pvfmm_stks_kernel.hpp
tests/: CMakeLists.txt  test_bis.cpp
tests/bdry3d/: CMakeLists.txt  test_face_map.cpp  test_face_map_vs_blendsurf.cpp  test_p4est_interface.cpp  test_p4est_patch_refinement.cpp  test_patch_samples.cpp  test_patch_surf_blended.cpp  test_patch_surf_nanospline.cpp
tests/bie3d/: CMakeLists.txt  test_error_estimate.cpp  test_evaluation.cpp  test_evaluator_near.cpp  test_evaluator_near_extrapolate.cpp  test_evaluator_near_interpolate.cpp  test_lagrange_interpolation.cpp  test_lagrange_interpolation.hpp  test_markgrid.cpp  test_patch_refinement.cpp  test_point_marking.cpp  test_solver.cpp  test_solver_gmres_double_layer.cpp  test_spatial_grid.cpp
tests/common/: CMakeLists.txt  test_boundary_data.cpp  test_fft_refinement.cpp  test_interpolate.cpp  test_stats.cpp  test_utils.cpp  test_write_latex.cpp
tests/examples/: CMakeLists.txt  matvec_examples.cpp  solver_examples.cpp
tests/exec/: kernel_comparison.cpp  on_surface_eval_test_constant_density.cpp  on_surface_eval_test_volume.cpp  on_surface_eval_test_with_solve.cpp  qbkix_batch_testing.cpp
tests/fmm3d/: CMakeLists.txt  test_fmm_interface.cpp
tests/regression_data/PatchSamples/cube/face_map/no_ref/: sample_point_3d_position.reg  sample_point_blend_func_value.reg  sample_point_combined_weight.reg  sample_point_interpolant_spacing.reg  sample_point_jacobian.reg  sample_point_normal.reg  sample_point_quad_weight.reg
tests/regression_data/PatchSamples/newtorus/face_map/no_ref/: sample_point_3d_position.reg  sample_point_combined_weight.reg  sample_point_far_field.reg  sample_point_jacobian.reg  sample_point_normal.reg  sample_point_quad_weight.reg
tests/regression_data/PatchSamples/pipe/blended/: sample_point_3d_position.reg  sample_point_blend_func_value.reg  sample_point_combined_weight.reg  sample_point_far_field.reg  sample_point_jacobian.reg  sample_point_normal.reg  sample_point_quad_weight.reg
tests/regression_data/SolverGMRESDoubleLayer/laplace/const_density/cube/blended/: evaluted_potential.reg  solved_density.reg
tests/regression_data/SolverGMRESDoubleLayer/laplace/const_density/cube/face_map/no_ref/: solved_density.reg  (+1 more)
tests/regression_data/SolverGMRESDoubleLayer/laplace/point_charge/cube/blended/: evaluted_potential.reg  solved_density.reg
tests/results/: CMakeLists.txt  generate_paraview_files.cpp  test_adaptive.cpp  test_expansion_error.cpp  test_gmres_convergence_qbkix.cpp  test_greens_identity.cpp  test_high_curvature.cpp  test_qbkix_eval_convergence.cpp  test_qbkix_vs_singular_quad.cpp  test_quadrature_error.cpp  test_reproduce_ybz_2006.cpp  test_singular_eval_convergence.cpp
tests/utils/: CMakeLists.txt  evaluation_utils.cpp  evaluation_utils.hpp  regression_utils.cpp  regression_utils.hpp  test_benchmark.cpp  view_qbkix_points.cpp  write_patch_data_to_vtk.cpp
tests/visual_test/: view_interpolation_error.py  view_samples.py
utils/pvfmm-utils/: CMakeLists.txt  fmm_interface.f90  makefile  pvfmm-install-notes.txt  pvfmm-quick-intro.txt  pvfmm_interface.cc  pvfmm_interface.h  pvfmm_laplace_kernel.cpp  pvfmm_mod_helmholtz_kernel.cpp  pvfmm_navier_kernel.cpp  pvfmm_stks_kernel.tpp
utils/pvfmm-utils/cmake/: FindPVFMM.cmake  pvfmmutils-config.cmake
(+152 files in other folders)
